--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,71 +1,77 @@
-
-.home-container{
+.home-container {
     max-width: 1800px;
     margin: 0 auto;
 }
 
-.titulo{
-   font-size: 3em;
-   font-weight: 400;
-   
+.titulo {
+    font-size: 2.0em;
+    font-weight: 400;
+
 }
-.subtitulo{
+
+.subtitulo {
     font-size: 2.5em;
     font-weight: 350;
 }
 
-.borde{
+.borde {
     border-bottom: 1px solid #1D1616;
-    margin-right: 90%;
+    width: 10px;
+    height: 10px;
     padding-top: 10px;
 }
 
-.flecha{
+.flecha {
     font-size: 1.5em;
 }
-.borde-interno{
+
+.borde-interno {
     border-bottom: 1px solid #5E686D;
     margin-top: 30px;
     margin-bottom: 30px;
     opacity: 0.3;
 }
 
-.container-anuncios{
+.container-anuncios {
     max-width: 1800px;
     margin: 0 auto;
-    padding-bottom:50px ;
+    padding-bottom: 50px;
 }
-.border-anuncios{
+
+.border-anuncios {
     border-bottom: 1px solid #1D1616;
     margin-right: 95%;
     padding-bottom: 10px;
 }
-.anuncio-one{
+
+.anuncio-one {
     border: 1px solid #1D1616;
     flex: 50%;
     padding: 20px;
 
 
 }
-.container-anuncios-Internal{
+
+.container-anuncios-Internal {
     display: flex;
     flex-direction: row;
     margin-top: 20px;
     margin-bottom: 10px;
-    
+
 
 
 }
-.anuncio-two{
+
+.anuncio-two {
     flex: 50%;
     border: 1px solid #1D1616;
     margin-left: 60px;
     padding: 20px;
 }
 
-.btn-1{
+.btn-1 {
     border: none;
-   /* color: white;*/
+    /* color: white;*/
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -74,13 +80,58 @@
     margin: 4px 2px;
     cursor: pointer;
 }
-.btn-apolo{
+
+.btn-apolo {
     /*background-color: white; */
-   
+
     border: 2px solid #f44336;
 }
-.btn-apolo:hover{
+
+.btn-apolo:hover {
     transition: all 1s;
     /*background-color: #f44336;*/
     border: 2px solid #1D1616;
+}
+
+.flex-container-inicio {
+    display: flex;
+    flex-direction: row;
+ /*   border: 1px solid black;*/
+    margin-bottom: 0%;
+}
+.flex-left-image-inicio{
+    flex: 50%;
+    padding: 50px;
+    margin-bottom: 200px;
+}
+.flex-right-image-inicio{
+    flex: 50%;
+    padding: 50px;
+}
+.image-left{
+    margin-left: 50%;
+    
+}
+
+@media (max-width: 1060px) {
+    .flex-container-inicio{
+        flex-direction: column;
+    }
+    .image{
+        text-align: center;
+        margin-left: 33.34%;
+        
+    }
+    .flex-left-image-inicio{
+        padding: 20px;
+    }
+    .flex-right-image-inicio{
+        padding: 20px;
+    }
+
+  }
+
+.flex-container-inicioDos{
+    display: flex;
+    flex-direction: row;
 }
