--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -3,7 +3,8 @@
     overflow: hidden;
     position: relative;
     padding: 20px 0;
-    background: #f8f8f8;
+    margin-top: 30px;
+
   }
   
   .carousel-track {
