--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,6 +1,8 @@
 .home-container {
     max-width: 1800px;
     margin: 0 auto;
+
+
 }
 
 .titulo {
@@ -58,8 +60,6 @@
     margin-top: 20px;
     margin-bottom: 10px;
 
-
-
 }
 
 .anuncio-two {
@@ -96,42 +96,117 @@
 .flex-container-inicio {
     display: flex;
     flex-direction: row;
- /*   border: 1px solid black;*/
-    margin-bottom: 0%;
+    /*   border: 1px solid black;*/
+
+    background-color: rgba(223, 217, 182, 0.2);
+
+
+
+
 }
-.flex-left-image-inicio{
+
+.flex-left-image-inicio {
     flex: 50%;
     padding: 50px;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
 }
-.flex-right-image-inicio{
+
+.flex-right-image-inicio {
     flex: 50%;
     padding: 50px;
+    margin-bottom: 50px;
 }
-.image-left{
+
+.image-left {
     margin-left: 50%;
-    
+
+}
+
+.desaparecerPC {
+    display: none;
+}
+
+.link-anuncio {
+    text-decoration: none;
 }
 
 @media (max-width: 1060px) {
-    .flex-container-inicio{
+    .flex-container-inicio {
         flex-direction: column;
     }
-    .image{
+
+    .image {
         text-align: center;
         margin-left: 33.34%;
-        
+
     }
-    .flex-left-image-inicio{
+
+    .flex-left-image-inicio {
         padding: 20px;
+        width: 100%;
+        aspect-ratio: 1/1;
     }
-    .flex-right-image-inicio{
+
+    .flex-right-image-inicio {
         padding: 20px;
     }
 
-  }
+    .image-svg {
+        margin-left: 500px;
+    }
 
-.flex-container-inicioDos{
-    display: flex;
-    flex-direction: row;
+    svg {
+        width: 500px;
+        height: 100%;
+        margin: 100px auto;
+    }
+
+    .container-anuncios-Internal {
+        flex-direction: column;
+    }
+
+    .anuncio-one {
+        margin-right: 2px;
+
+    }
+
+    .anuncio-two {
+        display: none;
+
+    }
+
+    .titulo {
+        display: none;
+    }
+
+    .subtitulo-SG {
+        text-align: center;
+    }
+
+    .desaparecer {
+        display: none;
+    }
+
+    .desaparecerDispositivo {
+        display: none;
+    }
+
+    .aparecerDispositivo {
+        display: block;
+    }
+    .btn-1{
+        width: 100%;
+        margin: 15px 0 0 ;
+    } 
+  
+
 }
+
+@media (max-width: 530px){
+    svg{
+        width: 100%;
+        height: 100%;
+      
+    }
+}
+
