--- a/src/Pages/ApoloONE/ApoloONE.css
+++ b/src/Pages/ApoloONE/ApoloONE.css
@@ -35,9 +35,31 @@
     margin-bottom: 20px;
     padding: 20px 10px;
 }
+.DesaparecerPC{
+    display: none;
+} 
+.aparecerPC{
+    display: flex;
+    flex: 50%;
+}
+
 
 @media (max-width: 1060px) {
     .flex-about-main{
         flex-direction: column;
     }
+    .aparecerDispositivo{
+        display: flex;
+       
+    }
+    .DesaparecerDispositivo{
+        display: none;
+    }
+    .img-dispositivo{
+        width: 100%;
+        height: 100%;
+    }
+
+  
+   
 }
