changed app nosotros home anuncios cards footerpage & create agendar personal loader

--- a/src/Pages/Nosotros/Nosotros.css
+++ b/src/Pages/Nosotros/Nosotros.css
@@ -33,4 +33,10 @@
     .flex-nosotros-main{
         flex-direction: column;
     }
+ 
+    .img-dispositivo{
+        width: 100%;
+        height: 100%;
+    }
+
 }
