--- a/src/components/Navbar/NavbarPage.css
+++ b/src/components/Navbar/NavbarPage.css
@@ -128,7 +128,9 @@
   
     }
     .dropdown-item{
+        padding-top: 20px;
         margin-top: 20px;
+       
     }
     .solicitar-demo{
         border: 2px solid #f44336;
